@@ -169,26 +169,27 @@ all([1]), [Vecsmall([128, -1])], [0, 0, 0, 0, 0, 0, 0, [[2, 3]~]]]
 [1 + 2*3 + 3^2 + 2*3^3 + 3^4 + 3^5 + 2*3^6 + 3^7 + 3^8 + O(3^10), 1 + 3 + 3^
 3 + 3^4 + 2*3^5 + 2*3^6 + 2*3^7 + O(3^10), 3 + 2*3^3 + 2*3^7 + O(3^8), [1 + 
 2*3 + 3^2 + 2*3^3 + 3^4 + 3^6 + 3^9 + O(3^10), 1 + 3 + 2*3^2 + 3^3 + 2*3^4 +
- 2*3^5 + 3^6 + 3^9 + O(3^10)], 2*3^2 + 3^4 + 3^5 + 3^6 + O(3^7), [[24337, 40
-465, 16489, 23050], [27838, 25318, 29611, 23050], [3^2 + 2*3^3 + 3^4 + 3^6 +
- 3^7 + 2*3^8 + 2*3^9 + O(3^10), 3^4 + 2*3^5 + 2*3^6 + 2*3^8 + O(3^10), 3^8 +
- 2*3^9 + O(3^10)], 0]]
+ 2*3^5 + 3^6 + 3^9 + O(3^10)], 2*3^2 + 3^4 + 3^5 + 3^6 + O(3^7), [[20563, 24
+337, 40465, 16489, 23050], [21109, 27838, 25318, 29611, 23050], [3 + 2*3^2 +
+ 2*3^4 + 2*3^6 + 2*3^7 + 2*3^8 + 2*3^9 + O(3^10), 3^2 + 2*3^3 + 3^4 + 3^6 + 
+3^7 + 2*3^8 + 2*3^9 + O(3^10), 3^4 + 2*3^5 + 2*3^6 + 2*3^8 + O(3^10), 3^8 + 
+2*3^9 + O(3^10)], 0]]
 [3^-1 + 2 + 2*3^2 + 2*3^5 + 2*3^6 + 2*3^7 + O(3^10)]~
 [3^2 + 2*3^3 + 3^4 + 2*3^5 + 3^6 + 3^7 + 2*3^8 + 3^9 + 3^10 + O(3^12), 3 + 3
 ^2 + 3^4 + 3^5 + 2*3^6 + 2*3^7 + 2*3^8 + O(3^11), 3 + 2*3^3 + 2*3^7 + O(3^8)
 , [3^-2 + 2*3^-1 + 1 + 2*3 + 3^2 + 3^4 + 3^7 + O(3^8), 3^-2 + 3^-1 + 2 + 3 +
  2*3^2 + 2*3^3 + 3^4 + 3^7 + O(3^8)], 2*3^2 + 3^4 + 3^5 + 3^6 + O(3^7)]
-error("incorrect type in obj_check (t_VEC).")
-[2 + 2^6 + 2^10 + 2^11 + O(2^13), Mod(x, x^2 + (2 + 2^2 + 2^3 + 2^4 + 2^5 + 
-2^7 + 2^8 + 2^9 + 2^12 + O(2^13))), 2^3 + 2^4 + O(2^8), [2^-3 + 2^2 + 2^4 + 
-2^7 + 2^10 + 2^11 + O(2^12), 2^-3 + 2^2 + 2^5 + 2^6 + 2^10 + 2^13 + O(2^14)]
-, 1, [[8161, 3553, 7649], [15329, 11745, 7649], [2^7 + 2^10 + 2^11 + O(2^12)
-, 2^10 + 2^11 + O(2^12)], -3]]
-[1 + 2^2 + 2^7 + 2^9 + 2^11 + 2^14 + 2^15 + O(2^16), Mod(x, x^2 + (1 + 2 + 2
-^3 + 2^4 + 2^5 + 2^6 + 2^8 + 2^10 + 2^12 + 2^13 + O(2^16))), 2^6 + 2^10 + 2^
-11 + O(2^12), [2^-2 + 1 + 2 + 2^4 + 2^9 + 2^10 + O(2^16), 2^-2 + 1 + 2 + 2^4
- + 2^8 + 2^11 + 2^15 + O(2^17)], 1, [[7757, 40525], [73293, 40525], [2^14 + 
-2^15 + O(2^16)], -2]]
+[3^-4 + 3^-2 + O(3^0), 2*3^-6 + 2*3^-5 + 2*3^-4 + O(3^-2)]
+[2 + 2^6 + O(2^10), Mod(x, x^2 + (2 + 2^2 + 2^3 + 2^4 + 2^5 + 2^7 + 2^8 + 2^
+9 + O(2^10))), 2^3 + 2^4 + O(2^8), [2^-3 + 2^2 + 2^4 + 2^7 + O(2^10), 2^-3 +
+ 2^2 + 2^5 + 2^6 + 2^10 + O(2^12)], 1, [[1185, 2017, 481, 1505], [8993, 3041
+, 2529, 1505], [2^4 + 2^5 + O(2^10), 2^7 + 2^8 + 2^9 + O(2^10), 2^8 + 2^9 + 
+O(2^10)], -3]]
+[1 + 2^2 + 2^7 + 2^9 + 2^11 + 2^14 + O(2^15), Mod(x, x^2 + (1 + 2 + 2^3 + 2^
+4 + 2^5 + 2^6 + 2^8 + 2^10 + 2^12 + 2^13 + O(2^15))), 2^6 + 2^10 + 2^11 + O(
+2^12), [2^-2 + 1 + 2 + 2^4 + 2^9 + 2^10 + O(2^15), 2^-2 + 1 + 2 + 2^4 + 2^8 
++ 2^11 + 2^15 + O(2^16)], 1, [[6221, 7757], [140365, 7757], [2^8 + 2^10 + 2^
+11 + 2^12 + 2^13 + 2^14 + O(2^15)], -2]]
 x^-2 + 31/15*x^2 + 2501/756*x^4 + 961/675*x^6 + 77531/41580*x^8 + O(x^9)
 [5.0000000000000000000000000000000000000, 4.99999999999999999999999999999999
 99998]
@@ -348,13 +349,10 @@ O(11^8)
 Mod((2 + 2*3 + 2*3^2 + 2*3^3 + 2*3^4 + 2*3^5 + 2*3^6 + 2*3^7 + 2*3^8 + O(3^9
 )), x^2 + (1 + 3 + 2*3^4 + 3^8 + O(3^9)))
 Mod(O(3^9), x^2 + (1 + 3 + 2*3^4 + 3^8 + O(3^9)))
-Mod((1 + 3 + 2*3^2 + 2*3^3 + 2*3^5 + O(3^9))*x + (2*3 + 3^2 + 3^3 + 2*3^5 + 
-3^6 + 2*3^7 + 2*3^8 + O(3^9)), x^2 + (1 + 3 + 2*3^4 + 3^8 + O(3^9)))
-  ***   at top-level: testzellQp(e,[0,0])
-  ***                 ^-------------------
-  ***   in function testzellQp: ...inttoz(e,P);print(a);a^2-
-  ***   ellpointtoz(e,elladd
-  ***   ^--------------------
+  ***   at top-level: testzellQp(e,ellmul(
+  ***                 ^--------------------
+  ***   in function testzellQp: my(a,Q);a=ellpointtoz(e,P);Q=e
+  ***                                     ^--------------------
   *** ellpointtoz: sorry, ellpointtoz when u not in Qp is not yet implemented.
 Mod((2 + 2*3 + 3^2 + 3^3 + 3^5 + 3^7 + O(3^10))*x + (1 + 3 + 2*3^2 + 2*3^4 +
  2*3^5 + 3^6 + 3^8 + 2*3^9 + O(3^10)), x^2 + (3 + 3^3 + 2*3^4 + 3^5 + 2*3^6 
@@ -362,9 +360,9 @@ Mod((2 + 2*3 + 3^2 + 3^3 + 3^5 + 3^7 + O(3^10))*x + (1 + 3 + 2*3^2 + 2*3^4 +
 Mod(O(3^10)*x + O(3^10), x^2 + (3 + 3^3 + 2*3^4 + 3^5 + 2*3^6 + 3^7 + 2*3^8 
 + 3^9 + 2*3^10 + 3^11 + O(3^13)))
 Mod((2^2 + 2^4 + 2^5 + 2^6 + 2^8 + O(2^10))*x + (1 + 2 + 2^2 + 2^8 + O(2^11)
-), x^2 + (1 + 2^2 + 2^4 + 2^5 + 2^7 + 2^8 + 2^9 + 2^13 + 2^14 + O(2^15)))
-Mod(O(2^9)*x + O(2^9), x^2 + (1 + 2^2 + 2^4 + 2^5 + 2^7 + 2^8 + 2^9 + 2^13 +
- 2^14 + O(2^15)))
+), x^2 + (1 + 2^2 + 2^4 + 2^5 + 2^7 + 2^8 + 2^9 + O(2^12)))
+Mod(O(2^11)*x + O(2^9), x^2 + (1 + 2^2 + 2^4 + 2^5 + 2^7 + 2^8 + 2^9 + O(2^1
+2)))
 [Mod(0, 11), Mod(0, 11), Mod(0, 11), Mod(1, 11), Mod(1, 11), Mod(0, 11), Mod
 (2, 11), Mod(4, 11), Mod(10, 11), Mod(7, 11), Mod(5, 11), Mod(10, 11), Mod(9
 , 11), Vecsmall([3]), [11, [9, 5, [6, 0, 0, 0]]], [0, 0, 0, 0]]
