@@ -211,8 +211,10 @@ ellinit([108/91,11664/8281,-6561/8281,708588/753571,-14348907/68574961]).disc
 e=ellinit([1,3.+I]); x=1/2+I; y=ellordinate(e,x)[1];
 ellztopoint(e,ellpointtoz(e,[x,y]))
 testzellQp(e, P)=
-{
+{ my(a,Q);
   a = ellpointtoz(e,P);
+  Q = ellztopoint(e,a);
+  if (liftall(Q-P),error([e,P]));
   print(a);
   a^2 - ellpointtoz(e, elladd(e,P,P));
 }
@@ -222,7 +224,7 @@ ellpointtoz(e,[Mod(3,'x^2+1),1]);
 testzellQp(e, [0,0])
 e=ellinit([1,1,1,-10,-10], O(3^5));
 testzellQp(e, [3,-2])
-testzellQp(e, [0,0]) \\ not on curve !
+testzellQp(e, ellmul(e,[0,0],2)) \\ not on curve !
 e=ellinit(ellfromj(2/9), O(3^10)); x=2; y=ellordinate(e,x)[1];
 testzellQp(e, [x,y])
 e=ellinit(ellfromj(1/4), O(2^10)); x=1/2; y=ellordinate(e,x)[1];
