@@ -46,6 +46,7 @@ Done for version 2.8.1 (released ??/??/2016):
    24- [libpari] ZNstar, znstar0, znlog0
    25- GP function znchartokronecker
    26- [libpari] ser_inv
+   27- allow ellztopoint for E/Qp
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
